test/errors/stmt_assign_dunder_debug.py
__debug__ = 1
