test/errors/stmt_assign_dunder_debug.py.expected
test/errors/stmt_assign_dunder_debug.py:1 error: cannot assign to __debug__
